# urbanWear

./: .dockerignore  .env.example  .gitIgnore  .gitignore  Dockerfile  Pipfile  Procfile  README.md  build.sh  data.json  entrypoint.sh  manage.py  nixpacks.toml  pyproject.toml  release_tasks.sh  render.yaml  requirements.txt  run_app.sh  runtime.txt
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.js  constants.js  data.js  global-styles.js  index.js  theme.js
client/src/api/: cartApi.js  index.js  productApi.js  userApi.js
client/src/components/: AddressForm.js  CartItem.js  CheckBox.js  Coupon.js  Dropdown.js  EmailUpdate.js  Header.js  Input.js  Login.js  Modal.js  ModalProvider.js  NotContent.js  Notifications.js  PrivateRoute.js  Product.js  ProductCarousel.js  ProductFilter.js  QuantityInput.js  QuickCart.js  SearchBox.js  SideBar.js  Spinner.js  Tabs.js  index.js
client/src/ducks/: auth.js  cart.js  global.js  index.js
client/src/hooks/: index.js  useFilter.js  useModal.js  useOnScreen.js  useUpdateEffect.js
client/src/views/: 4o4.js  Cart.js  Checkout.js  Home.js  Page.js  PaymentComplete.js  ProductDetail.js  Shop.js  Store.js  index.js  t.js
client/src/views/Account/: Addresses.js  Dashboard.js  OrderList.js  UserDetails.js  index.js
decor/: asgi.py  settings.py  urls.py  wsgi.py
store/: admin.py  models.py
store/api/: pagination.py  serializers.py  urls.py  views.py
store/management/commands/: seed.py
store/migrations/: 0001_initial.py
urbanWear/: asgi.py  settings.py  urls.py  wsgi.py
(+4 files in other folders)
