[tool.poetry]
name = "urbanwear"
version = "0.1.0"
description = ""
authors = ["IgweDaniel <danielchibuzoigwe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cffi = "^1.15.1"
psycopg2 = "^2.9.7"
python-dotenv = "^1.0.0"
pillow = "^10.0.0"
django = "^4.2.4"
django-cloudinary-storage = "^0.3.0"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.0"
django-storages = "^1.13.2"
gunicorn = "^21.2.0"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
